# EH2023-G09-Project-MLNTMA

./: .gitignore  README.rst  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst  old_api_page.rst  sample_page.rst  usage.rst
docs/source/datasets/: dataset.rst  dataset1_desc.rst  dataset2_desc.rst  gen_dataset.rst
docs/source/methods/: gen_methods.rst  gen_methods.rst.bak  method1.rst  method1.rst.bak  method2.rst
docs/source/notebooks/: analysis.ipynb  analysis3.ipynb  analysis_dl.ipynb  analysis_ml.ipynb  analysis_rnn.ipynb  analysis_rnn2.ipynb  analysis_rnn_bak.ipynb
docs/source/sample_page/: sample_sub_page.rst
docs/theme/: conf.py  custom.css
src/: analysis.ipynb  analysis2.ipynb  analysis3.ipynb  analysis_rnn2.ipynb
