[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ML-based Network Traffic Monitoring and Analysis methods"
authors = [{name = "Constantinos Kyriakides", email = ""},
           {name = "Melle Starke", email = ""},
           {name = "Aditya Menon", email = ""}]
dynamic = ["version", "description"]
